--- a/AimeeYi01.github.io/entries/entry2/index.html
+++ b/AimeeYi01.github.io/entries/entry2/index.html
@@ -13,7 +13,7 @@
   <h3 style="text-align:center;">: small paper ticket that can be redeemed for a discount at KFC</h3>
 
   <p><br>
-  <img src="https://th.bing.com/th/id/R.e25c959cdde2dd8634c9bb39e361e677?rik=H26ueJrutLklmg&riu=http%3a%2f%2fimg.sccnn.com%2fbimg%2f334%2f9792.jpg&ehk=En9w%2fC3TA7iqE66LaGkG%2b1qVKUThn%2fZFGM2JEYCA5Q0%3d&risl=&pid=ImgRaw&r=0" alt="coupons" class="center" style="width:208px;height:284px;class="center">
+  <img src="KFC Coupon.jpeg" alt="coupons" class="center" style="width:208px;height:284px;class="center">
   	<br><p>
 	
   <h2 style="text-align:center;">History of the KFC paper coupons</h2>
