--- a/AimeeYi01.github.io/entries/entry3/index.html
+++ b/AimeeYi01.github.io/entries/entry3/index.html
@@ -38,7 +38,7 @@
 <h1 style="text-align:center;">QQ SHOW</h1>
 <h3 style="text-align:center;">: Display of virtual characters in QQ</h3>
 
-<img src="QQ1.png" alt="QQ show characters" style="width:250px;height:200px;">
+<img src="QQ1.png" alt="QQ show character" style="width:250px;height:200px;">
 <img src="QQ2.png" alt="QQ show character"  style="width:250px;height:190px;">
 <img src="QQ3.jpeg" alt="QQ show character" style="width:300px;height:200px;">
 <img src="QQ4.png" alt="QQ show character"  style="width:280px;height:190px;">
