--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
 <a href="entry1/index.html"><p>entry1</p></a>
 
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">entry 6</a></p>
+
 </body>
 </html>
