--- a/entries/entry1/index.html
+++ b/entries/entry1/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Aimee's Harmonic Collection</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/idb6vdd.css">
+<link rel="stylesheet" href="https://use.typekit.net/wlw3dkb.css">
+<title>Entry 1</title>
 </head>
+
 <body>
-	<h1>1: Newsstand</h1>
-	<h2>A Newsstand is a stand for the sale of newspapers, magazines, and books.<h2>
-	<h3>Photos of newsstands:<h3>
 
-  .<br>.<br>.<br>.<br>.<br>.
+<div class="h1">
+    <p>Newsstand</p>
+</div>
 
+<div class="h2">
+    <p>a stand for the sale of newspapers, magazines, and books</p>
+</div>
 
-  <hr>
+<div class="p">
+    <div class="p1">
+        <p>In China, newsstands once played a role in supporting employment. In the mid-1990s, with the social transformation, a large number of workers were laid off. How to settle laid-off workers became an issue that local governments must consider, so many newsstands were established. Behind the newsstand owner, there are the scars of an era. </p>
+    </div>
 
-  <h2>History of the newsstand:<h2>
-  <h5> </h5>
-  <p>In China, newsstands once played a role in supporting employment. In the mid-1990s, with the social transformation, a large number of workers were laid off. How to settle laid-off workers became an issue that local governments must consider, so many newsstands were established. Behind the newsstand owner, there are the scars of an era. </p>
+    <div class="p2">
+        <p>In the early years, people had the habit of buying newspapers every day. They also buy magazines and books frequently because only paper books were available at that time. So the business of newsstands was very good. With the development of electronic products, more and more people choose to read online. The sales of paper materials declined, and many newsstands closed down. Few newsstands that survived from this difficult situation transformed into small shops. The newsstands not only collect people’s memories, but also retains the warmth of a city. </p>
+    </div>
 
-  <p>In the early years, people had the habit of buying newspapers every day. They also buy magazines and books frequently because only paper books were available at that time. So the business of newsstands was very good.With the development of electronic products, more and more people choose to read online.The sales of paper materials declined, and many newsstands closed down.Few newsstands that survived from this difficult situation transformed into small shops.The newsstands not only collect people’s memories, but also retains the warmth of a city. </p>
+    <div class="p3">
+        <p>When I was in primary school, I only had a little pocket money. Whenever I got new pocket money from my parents, I would use most of it to go to the newsstand near my home and buy a few comics magazines. These comic magazines cultivated my interest in art and were one of my artistic enlightenments. But as I grew up, the main focus of the newsstand was no longer books and magazines, but snacks and drinks. I observed it every time I passed by it, and it looked like no one had taken the newspapers outside. At that time, I also started reading comics online. When I was in high school, the newsstand was closed down, and my childhood memory was suddenly gone with it. </p>
+    </div>
+</div>
 
-  <hr>
-
-  <h2>My memory of newsstands:</h2>
-  <h5> </h5>
-  <p>When I was in primary school, I had very little pocket money. Whenever I got new pocket money from my parents, I would use most of it to go to the newsstand near my home and buy a few comics magazines. These comic magazines cultivated my interest in art and were one of my artistic enlightenments. But as I grew up, the main focus of the newsstand was no longer books and magazines, but snacks and drinks. I observed it every time I passed by it, and it looked like no one had taken the newspapers outside. At that time, I also started reading comics online. When I was in high school, the newsstand was closed down, and my childhood memory was suddenly gone with it. </p>
-  <h5> </h5>
 </body>
 </html>
