--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -2,39 +2,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Entry 2</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/etz0eof.css">
+<link rel="stylesheet" href="https://use.typekit.net/qva6hpy.css">
+<link rel="stylesheet" href="https://use.typekit.net/etz0eof.css">
+<title>Entry 2</title>
+
+<style>
+
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+</style>
+
 </head>
+
 <body>
 
-  <h1 style="text-align:center;">KFC PAPER COUPONS</h1>
-  <h3 style="text-align:center;">: small paper ticket that can be redeemed for a discount at KFC</h3>
+<div class="t1">
+  <h1>MCDONALD'S PAPER COUPONS</h1>
+</div>
 
-  <p><br>
-  <img src="KFC Coupon.jpeg" alt="coupons" class="center" style="width:208px;height:284px;class="center">
-  	<br><p>
-	
-  <h2 style="text-align:center;">History of the KFC paper coupons</h2>
+<div class="t2">
+  <h2>small paper ticket that can be redeemed for a discount at McDonald's</h2>
+</div>
 
-  <p>
-  <span style='font-size:25px;'>&#127839;</span><span style='font-size:25px;'>&#127828;</span>
-  <br>People in China who have experienced the 2000s must be very familiar with KFC coupons. KFC coupons are leaflets that are full of food, and just looking at them will make you salivate. The leaflet is divided into many blocks by dotted lines, and each block has the product name and price. Such a simple coupon is collected by many people, especially children.<br> 
-  <br>
-  Merchants use coupons to give up uniform prices. This means selling more expensive to those who are willing to pay for a higher price and selling cheaper to those who only want to pay for a lower price. Through the use of coupons, different prices can be set for different types of consumers.<br>
-  <br>
-  Nowadays, people use coupons on their mobile phones. It’s true that electronic coupons are more convenient, but people also often miss paper coupons. KFC coupon is the memory of an era, which collects people's happiness.
-  <br>
-  <span style='font-size:25px;'>&#127831;</span><span style='font-size:25px;'>&#127846;</span>
-  <p>
 
-  <h2 style="text-align:center;">My memory of KFC paper coupons</h2>
- 
-  <p><span style='font-size:20px;'>&#128532;</span>
-  <br>Before I went to primary school, KFC in China still used paper coupons. My parents liked collecting coupons. Every time I wanted to eat at KFC, I asked them to give me coupons so I could choose the food I want. Once I decided, I carefully cut out the food I wanted from a whole page of coupon. Then I hold those small pieces of paper and mustered up courage to walk to the counter and told the clerk what I wanted to order. For me, a child, this was a very ritualistic action. At that time, I didn’t have a lot of pocket money. Sometimes when I was greedy, I just took out coupons and pretended ordering food. This was one of the great joys of my childhood. Now I have enough money, so I no longer need my parents’ permission to eat KFC, but I lose that simple joy.<br>
-  <span style='font-size:20px;'>&#128532;</span>
-  <p>  
+<div class="flex-container">
+
+  <div class="flex-item1">
+    <img src="mcp.png" alt="coupons" style="width:346px; height:462px;">
+  </div>
+
+  <div class="flex-item2">
+    <p>People in China who have experienced the 2000s must be very familiar with McDonald's coupons. These coupons are leaflets that are full of food, and just looking at them will make you salivate. The leaflet is divided into many blocks by dotted lines, and each block has the product name and price. Such a simple coupon is collected by many people, especially children. Merchants use coupons to give up uniform prices. This means selling more expensive to those who are willing to pay for a higher price and selling cheaper to those who only want to pay for a lower price. Through the use of coupons, different prices can be set for different types of consumers. Nowadays, people use coupons on their mobile phones. Electronic coupons are indeed more convenient, but people also often miss paper coupons. McDonald's coupon is the memory of an era, which collects people's happiness.
+    <br>
+    <br>
+    Before I went to primary school, McDonald's in China still used paper coupons generally. My parents liked collecting coupons. Every time I wanted to eat at McDonald's, I asked them to give me coupons so I could choose the food I wanted. Once I decided, I carefully cut out the food I wanted from a whole page of coupons. Then I held those small pieces of paper and mustered up the courage to walk to the counter and told the clerk what I wanted to order. For me, a child, this was a very ritualistic action. At that time, I didn’t have a lot of pocket money. Sometimes when I was greedy, I just took out coupons and pretended to order food. This was one of the great joys of my childhood. Now I have enough money, so I no longer need my parents’ permission to eat at McDonald's, but I lose that simple joy.
+  </div>
+</div>
+
+<div class="flex-container2">
+  <div class="flex-item3">
+    <img src="mss.png" style="width:495px; height:322px;">
+  </div>
+</div>
 
 </body>
 </html>
