--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <a href="entry1/index.html"><p>entry1</p></a>
 
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">entry 1</a></p>
+
 <p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">entry 6</a></p>
 
 </body>
