--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
-<link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
+<link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <title>Entry 3</title>
 
 <style>
+
   .flex-container {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+}
+
+ .flex-item1,
+ .flex-item2,
+ .flex-item3,
+ .flex-item4 {
+  margin: 1px;
+ }
+
+@media (max-width: 768px) {
+  .flex-container {
+    flex: 1 0 100%; 
   }
-
-  .flex-item {
-    flex: 1 0 50%; 
-    margin: 15px;
-  }
-
-  .flex-item img {
-    width: 100%; 
-    height: auto; 
-  }
-    
-  @media (max-width: 768px) {
-    .flex-item {
-      flex: 1 0 100%; 
-    }
-  }
- </style>
-
-</head>
-<body>
-
-
+}
 
 </style>
 
@@ -43,23 +35,28 @@
 
 <body>
 <br>
-<marquee behavior="alternate">It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life.></marquee>
+<marquee behavior="alternate">
+  It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life.>
+</marquee>
 
 <h1 style="text-align:center;">QQ SHOW</h1>
-<h3 style="text-align:center;">: Display of virtual characters in QQ</h3>
+<h2 style="text-align:center;">Display of virtual characters in QQ</h2>
 
+<div class="flex-container">
+        <div class="flex-item1"><img src="QQ1.png" alt="1" style="width:272px;height:229px;"></div>
 
-    <div class="flex-container">
-        <div class="flex-item"><img src="QQ1.png" alt="Image 1" style="width:250px;height:200px;>
+        <div class="flex-item2">
+            <img src="QQ2.png" alt="2" style="width:255px;height:188px;">
         </div>
 
-        <div class="flex-item"><img src="QQ2.png" alt="Image 2" style="width:250px;height:190px;></div>
+        <div class="flex-item3">
+            <img src="QQ3.jpeg" alt="3" style="width:320px;height:214px;">
+        </div>
 
-        <div class="flex-item"><img src="QQ3.jpeg" alt="Image 3" style="width:300px;height:200px;></div>
-
-        <div class="flex-item"><img src="QQ4.png" alt="Image 4" style="width:280px;height:190px;></div>
-    </div>
-
+        <div class="flex-item4">
+            <img src="QQ4.png" alt="4" style="width:284px;height:220px;">
+        </div>
+</div>
 
 <div class="p1">
   <p>
@@ -68,18 +65,18 @@
   QQ show officially came out in 2003. At that time, there were about 68 million people using the internet in China, and about 45.4% of them chose to use QQ for online chat. Young people are the main users of QQ, and QQ shows are very popular among them. The QQ show is the first step of their aesthetic freedom in the virtual community. In reality, they are young people who are being marginalized, because they have not yet entered society. So they are more eager to be recognized and noticed, and those beauties that cannot be reached in reality can be easily realized in the virtual world.
  </p>
 </div>
-
+<br>
 <div class="p2">
   <p>
   In the virtual world, the characters in the QQ show are equivalent to the users themselves. As long as you spend a little money to open a membership, you can choose any clothes. At that time, everyone would spend a lot of effort to carefully select clothes for their virtual characters, and also change the background to let them live in various environments. The QQ show used to be an important social business card for people, and the behavior of spending money on virtual clothes was also very common. "It's not a game, but my real life" is the slogan of the QQ show.
   </p>
 </div>
-
+<br>
 <div class="p3">
   <p>
   When I first contact with the internet, QQ was the app that I used the most. Besides chatting with my friends, the QQ show was my favorite. But I didn't have enough pocket money to get a membership, so I could only choose some basic clothes. The outfit of my virtual character was a regular T-shirt with jeans and canvas shoes. The background was a simple blue sky with green grassland. I was quite satisfied with this because I felt that it was very similar to me in reality. When my friends saw my QQ show, they were like seeing me in person.
   <br><br>
   Even so, I yearned for outfits that only members could choose from. I couldn't use those clothes, but I went through them one by one in the preview. Members can choose from some much more fancy outfits. There are gorgeous dresses, cool leather jackets, swimsuits, and so on. You can even choose exaggerated wings and angel halos. There are also more backgrounds for members to choose from, such as beaches, castles, and forests. I often spent a lot of time coming up with my ideal outfit in preview. I wanted to buy it when I had enough money. But when I had the ability to control my money, QQ was gradually replaced by other apps, and the QQ show was no longer used by many people. The QQ show is my fashion enlightenment, it teaches me how to match a good outfit. It even goes beyond the concept of fashion, because it is more comprehensive, not only limited to the clothes on the body, but also the background and the general atmosphere. It cultivated my aesthetics to some extent.
   </p>
-
 </body>
+</html>
