--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -1,58 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://use.typekit.net/amx1ghv.css">
-  <link rel="stylesheet" href="https://use.typekit.net/cqb3voq.css">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Entry 4</title>
-
-<style>
-  p.ex1{
-    padding:25px 50px 25px 50px;
-    margin:40px 20px 35px 750px;
-  }
-</style>
-
-<style>
-  p.ex2{
-    padding:25px 50px 25px 50px;
-    margin:20px 20px 35px 750px;
-  }
-</style>
-
-<style>
-  p.ex3{
-    padding:25px 50px 25px 50px;
-    margin:20px 20px 35px 750px;
-  }
-</style>
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/amx1ghv.css">
+<link rel="stylesheet" href="https://use.typekit.net/cqb3voq.css">
+<title>Entry 4</title>
 </head>
 
 <body>
 
 <h1 style="text-align:center;">WATER RING TOSS HANDHELD GAME</h1>
-<h3 style="text-align:center;">: A vintage toy</h3>
+<h2 style="text-align:center;">a vintage toy</h2>
 
-<div class="row">
-  <div class="column">
-    <img src="hhgame.png" alt="game" width="680" height="680">
+<div class="flex-container">
+
+  <div class="flex-item1">
+    <img src="hhgame.png" alt="game" width="610" height="610">
   </div>
 
-<p class="ex1">
-  The water ring toss handheld game is a vintage toy. It has a simple structure: two buttons on the surface and water in the body. The body isn’t full so it has a few bubbles. There are two vertical needles in the center of the body, as well as several plastic rings. When playing this game, you should press the buttons to create water pressure and push water upwards. By controlling the water pressure under the influence of natural gravity, the plastic rings will be set on the vertical needles. To win this game, you should put all the rings on the needles.
-</p>
-
-<p class="ex2">
-  When playing this game, people always try to improve their speed because they want to let all the rings be set on the needles as fast as possible. This process helps them practice their concentration and hand-eye coordination. Therefore, the water ring toss handheld game is an educational toy, especially for children. Also, it is compact and lightweight so it is easy to carry around. You can take it out and take a short break at any time.
-</p>  
-
-<p class="ex3">
-  This is one of my favorite childhood games. At that time, I didn't have my mobile phone, and this handheld game was already a precious thing for me. I carried it with me every day and took it out when I wanted to play, so it was like a mobile phone. Many people say that the disadvantage of this simple small handheld game is that it cannot connect players. But in fact, this can be achieved. When I was in primary school, all of my friends had their own handheld games. We just had to count down to three two one, and then start playing at the same time. The key is to see who put all the rings on the needles in the shortest time. I remember that during every competition, there was a group of children cheering around the competitors. But the competitors didn't say a word because they were focusing on their handheld games. At that time, happiness was so easy to achieve for us.
-</p>  
-
+  <div class="flex-item2">
+    <p class="ex1">
+      The water ring toss handheld game is a vintage toy. It has a simple structure: two buttons on the surface and water in the body. The body isn’t full so it has a few bubbles. There are two vertical needles in the center of the body, as well as several plastic rings. When playing this game, you should press the buttons to create water pressure and push water upwards. By controlling the water pressure under the influence of natural gravity, the plastic rings will be set on the vertical needles. To win this game, you should put all the rings on the needles.
+    </p>
+    <p class="ex2">
+      When playing this game, people always try to improve their speed because they want to let all the rings be set on the needles as fast as possible. This process helps them practice their concentration and hand-eye coordination. Therefore, the water ring toss handheld game is an educational toy, especially for children. Also, it is compact and lightweight so it is easy to carry around. You can take it out and take a short break at any time.
+    </p>
+    <p class="ex3">
+      This is one of my favorite childhood games. At that time, I didn't have my mobile phone, and this handheld game was already a precious thing for me. I carried it with me every day and took it out when I wanted to play, so it was like a mobile phone. Many people say that the disadvantage of this simple small handheld game is that it cannot connect players. But in fact, this can be achieved. When I was in primary school, all of my friends had their own handheld games. We just had to count down to three two one, and then start playing at the same time. The key is to see who put all the rings on the needles in the shortest time. I remember that during every competition, there was a group of children cheering around the competitors. But the competitors didn't say a word because they were focusing on their handheld games. At that time, happiness was so easy to achieve for us.
+    </p>
+  </div>
+</div>
 
 </body>
 </html>
