--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -9,88 +9,11 @@
 <link rel="stylesheet" href="https://use.typekit.net/lzl1qyk.css">
 <link rel="stylesheet" href="https://use.typekit.net/itf6tgz.css">
 
-
 <title>Entry 6</title>
 
-<style>
+</head>
 
-p:hover, p:active {color: #B12F54;}
-
-img {
-  opacity: 0.88;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-}
-
-.flex-item-left {
-  padding: 15px;
-  flex: 50%;
-  line-height: 1.7;
-  margin-top: 10px;
-  margin-left: 60px;
-  max-width: 780px;
-}
-
-.flex-item-right {
-  padding: 20px;
-  flex: 50%;
-  margin-top: 60px;
-  margin-left: 70px;
-}
-
-/* Responsive layout - makes a one column-layout instead of two-column layout */
-@media (max-width: 768px) {
-  .flex-container {
-    flex-direction: column;
-  }
-}
-
-.flip-box {
-  background-color: transparent;
-  perspective: 1000px;
-}
-
-.flip-box-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-box:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-box-front, .flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-box-front {
-  background-color: #bbb;
-}
-
-.flip-box-back {
-  font-size: 30px;
-  color: #D35B7E;
-  background-color: #555;
-  transform: rotateY(180deg);
-}
-
-</style>
+<body>
 
 <h1>TaTa Bubble Gum</h1>
 
@@ -98,13 +21,10 @@ img {
 
 <div class="roll"><marquee behavior="alternate">----FUN AND TASTY----FUN AND TASTY----FUN AND TASTY----</marquee><div>
 
-</head>
-
-<body>
-
 <div class="flex-container">
   <div class="flex-item-left"><p>In 1989, the TaTa Bubble Gum came out in China. At first, it was just a regular square bubble gum. Then the “TaTa Roll” came out in 1993. In 2005, “TaTa Roll" innovated the bubble gum roll that could be cut off by its outer package. The roll was 1.2 meters long, and children could control the length of the bubble gum. Children loved this creative design. When I was a child, I enjoyed holding the TaTa Roll in my hand, opening the package quickly to make a click, pulling out the length I wanted, then using the package to cut the bubble gum and make a click. This process was very satisfying.<br><br>
-  When I was in primary school, everyone in my class could blow bubbles successfully by eating the TaTa Bubble Gum. We often competed to blow bubble gum and compared who blew the biggest bubble. I remember a boy in my class who was very good at blowing bubbles, he once blew a bubble that was bigger than his face, and the bubble burst and stuck to his face. We laughed at him all day.<br><br>
+  When I was in primary school, everyone in my class could blow bubbles successfully by eating the TaTa Bubble Gum. We often competed to blow bubble gum and compared who blew the biggest bubble. I remember a boy in my class who was very good at blowing bubbles, he once blew a bubble that was bigger than his face, and the bubble burst and stuck to his face. We laughed at him all day.
+  <br><br>
   TaTa Bubble Gum was not only popular among children, but it was also a good helper for cashiers. When cashiers couldn't make a change, they often gave consumers some bubble gums instead of change. As a kid, I even wanted the cashier to give me some bubble gums rather than money. However, there are more types of snacks now, so the TaTa Bubble Gum is no longer the most popular product. People use mobile phones to pay, which makes TaTa Bubble Gum have no chance to appear. Speaking of which, I haven't eaten bubble gum for a long time, I wonder if I can still blow big bubbles now?</p></div>
 
 <div class="flip-box">
