--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -16,6 +16,9 @@
 
 <div class="top">
   <img src="yb.png" alt=" " width="100" height="100">
+  <div class="overlay">
+    <div class="top-text">put the coin in the slot</div>
+  </div>
 </div>
  
 <div class="content">
