--- a/index.html
+++ b/index.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Aimee Github</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<title>Aimee Homepage</title>
+
+<style type="text/css">
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+</style>
 </head>
+
 <body>
 
-<h1>Aimee</h1>
+<h1>Aimee's Harmonic Collection</h1>
+<h3>"Things that are important in my childhood memory"</h3>
 
-<a href="entry1/index.html"><p>entry1</p></a>
+<br><br>
 
 <p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">entry 1</a></p>
-
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">entry 2</a></p>
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">entry 3</a></p>
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">entry 4</a></p>
+<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">entry 5</a></p>
 <p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">entry 6</a></p>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<footer>
+	<div class="scrollmenu">
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">2</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">3</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">4</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">5</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">6</a>
+	</div>
 
 </body>
 </html>
