--- a/entries/entry1/index.html
+++ b/entries/entry1/index.html
@@ -33,5 +33,10 @@
     </div>
 </div>
 
+<footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">next</a>
+
 </body>
 </html>
