--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -53,5 +53,12 @@
   </div>
 </div>
 
+<footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">previous</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">next</a>
+
 </body>
 </html>
