--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -78,5 +78,14 @@
   <br><br>
   Even so, I yearned for outfits that only members could choose from. I couldn't use those clothes, but I went through them one by one in the preview. Members can choose from some much more fancy outfits. There are gorgeous dresses, cool leather jackets, swimsuits, and so on. You can even choose exaggerated wings and angel halos. There are also more backgrounds for members to choose from, such as beaches, castles, and forests. I often spent a lot of time coming up with my ideal outfit in preview. I wanted to buy it when I had enough money. But when I had the ability to control my money, QQ was gradually replaced by other apps, and the QQ show was no longer used by many people. The QQ show is my fashion enlightenment, it teaches me how to match a good outfit. It even goes beyond the concept of fashion, because it is more comprehensive, not only limited to the clothes on the body, but also the background and the general atmosphere. It cultivated my aesthetics to some extent.
   </p>
+</div>
+
+<footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">previous</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">next</a>
+    
 </body>
 </html>
