--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -33,6 +33,13 @@
   </div>
 </div>
 
+<footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">previous</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">next</a>
+
 </body>
 </html>
 
