--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -38,5 +38,12 @@
   </div>
 </div>
 
+<footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">previous</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">next</a>
+
 </body>
 </html>
