--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -38,5 +38,11 @@
   </div>
 </div>
 
+  <footer>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">previous</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+
+
 </body>
 </html>
