--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -4,14 +4,19 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/kml3rmk.css">
 <link rel="stylesheet" href="https://use.typekit.net/rej8ybj.css">
-<link rel="stylesheet" href="https://use.typekit.net/ben4rdz.css">
+
+
 <title>Entry 5</title>
 
 </head>
 <body>
 
-<h1>KIDDIE RIDE</h1>
+<div class="t1">
+  <h1>KIDDIE RIDE</h1>
+</div>
+
 <h3>an interactive coin-operated ride</h3>
 
 <div class="top">
