--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 
 div.scrollmenu {
-  background-color: #333;
+  background-color: #224DFE;
   overflow: auto;
   white-space: nowrap;
 }
@@ -23,26 +23,40 @@ div.scrollmenu a {
 }
 
 div.scrollmenu a:hover {
-  background-color: #777;
+  background-color: #0129CB;
 }
+
 </style>
 </head>
 
 <body>
 
-<h1>Aimee's Harmonic Collection</h1>
-<h3>"Things that are important in my childhood memory"</h3>
 
 <br><br>
 
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">entry 1</a></p>
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">entry 2</a></p>
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">entry 3</a></p>
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">entry 4</a></p>
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">entry 5</a></p>
-<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">entry 6</a></p>
+<div class="ordered-text" id="text1">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a></p>
+</div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="ordered-text" id="text2">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">2</a></p>
+</div>
+
+<div class="ordered-text" id="text3">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">3</a></p>
+</div>
+
+<div class="ordered-text" id="text4">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">4</a></p>
+</div>
+
+<div class="ordered-text" id="text5">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">5</a></p>
+</div>
+
+<div class="ordered-text" id="text6">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">6</a></p>
+</div>
 
 <footer>
 	<div class="scrollmenu">
