--- a/homepage/index.html
+++ b/homepage/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://use.typekit.net/tiv2nqj.css">
 <title>Aimee Homepage</title>
 
 <style type="text/css">
@@ -31,31 +32,28 @@ div.scrollmenu a:hover {
 
 <body>
 
-
-<br><br>
-
 <div class="ordered-text" id="text1">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">Want to read?</a></p>
 </div>
 
 <div class="ordered-text" id="text2">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">2</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">You must be hungry.</a></p>
 </div>
 
 <div class="ordered-text" id="text3">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">3</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">Let's try on beautiful clothes.</a></p>
 </div>
 
 <div class="ordered-text" id="text4">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">4</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">Take a break and play the game.</a></p>
 </div>
 
 <div class="ordered-text" id="text5">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">5</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">Swing to the music!</a></p>
 </div>
 
 <div class="ordered-text" id="text6">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">6</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">Who has the biggest bubble?</a></p>
 </div>
 
 <footer>
